REF2610-1: support application without package specified